src/generated/GrammarParser.cpp

// Generated from D:/Slag/neolang/src/Parser/grammar/Grammar.g4 by ANTLR 4.9.1


#include "GrammarVisitor.h"

#include "GrammarParser.h"


using namespace antlrcpp;
using namespace antlr4;

GrammarParser::GrammarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

GrammarParser::~GrammarParser() {
  delete _interpreter;
}

std::string GrammarParser::getGrammarFileName() const {
  return "Grammar.g4";
}

const std::vector<std::string>& GrammarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& GrammarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

GrammarParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::ClassDeclarationContext* GrammarParser::CompilationUnitContext::classDeclaration() {
  return getRuleContext<GrammarParser::ClassDeclarationContext>(0);
}

tree::TerminalNode* GrammarParser::CompilationUnitContext::EOF() {
  return getToken(GrammarParser::EOF, 0);
}


size_t GrammarParser::CompilationUnitContext::getRuleIndex() const {
  return GrammarParser::RuleCompilationUnit;
}


antlrcpp::Any GrammarParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::CompilationUnitContext* GrammarParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, GrammarParser::RuleCompilationUnit);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(20);
    classDeclaration();
    setState(21);
    match(GrammarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassDeclarationContext ------------------------------------------------------------------

GrammarParser::ClassDeclarationContext::ClassDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::ClassDeclarationContext::CLASS() {
  return getToken(GrammarParser::CLASS, 0);
}

tree::TerminalNode* GrammarParser::ClassDeclarationContext::IDENTIFIER() {
  return getToken(GrammarParser::IDENTIFIER, 0);
}

std::vector<GrammarParser::FieldContext *> GrammarParser::ClassDeclarationContext::field() {
  return getRuleContexts<GrammarParser::FieldContext>();
}

GrammarParser::FieldContext* GrammarParser::ClassDeclarationContext::field(size_t i) {
  return getRuleContext<GrammarParser::FieldContext>(i);
}

std::vector<GrammarParser::MethodDeclarationContext *> GrammarParser::ClassDeclarationContext::methodDeclaration() {
  return getRuleContexts<GrammarParser::MethodDeclarationContext>();
}

GrammarParser::MethodDeclarationContext* GrammarParser::ClassDeclarationContext::methodDeclaration(size_t i) {
  return getRuleContext<GrammarParser::MethodDeclarationContext>(i);
}


size_t GrammarParser::ClassDeclarationContext::getRuleIndex() const {
  return GrammarParser::RuleClassDeclaration;
}


antlrcpp::Any GrammarParser::ClassDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitClassDeclaration(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::ClassDeclarationContext* GrammarParser::classDeclaration() {
  ClassDeclarationContext *_localctx = _tracker.createInstance<ClassDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, GrammarParser::RuleClassDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(23);
    match(GrammarParser::CLASS);
    setState(24);
    match(GrammarParser::IDENTIFIER);
    setState(25);
    match(GrammarParser::T__0);
    setState(29);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GrammarParser::FIELD) {
      setState(26);
      field();
      setState(31);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(35);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GrammarParser::DEF) {
      setState(32);
      methodDeclaration();
      setState(37);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(38);
    match(GrammarParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FieldContext ------------------------------------------------------------------

GrammarParser::FieldContext::FieldContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::FieldContext::FIELD() {
  return getToken(GrammarParser::FIELD, 0);
}

std::vector<tree::TerminalNode *> GrammarParser::FieldContext::IDENTIFIER() {
  return getTokens(GrammarParser::IDENTIFIER);
}

tree::TerminalNode* GrammarParser::FieldContext::IDENTIFIER(size_t i) {
  return getToken(GrammarParser::IDENTIFIER, i);
}


size_t GrammarParser::FieldContext::getRuleIndex() const {
  return GrammarParser::RuleField;
}


antlrcpp::Any GrammarParser::FieldContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitField(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::FieldContext* GrammarParser::field() {
  FieldContext *_localctx = _tracker.createInstance<FieldContext>(_ctx, getState());
  enterRule(_localctx, 4, GrammarParser::RuleField);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    match(GrammarParser::FIELD);
    setState(41);
    match(GrammarParser::IDENTIFIER);
    setState(42);
    match(GrammarParser::T__2);
    setState(43);
    match(GrammarParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MethodDeclarationContext ------------------------------------------------------------------

GrammarParser::MethodDeclarationContext::MethodDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::MethodDeclarationContext::DEF() {
  return getToken(GrammarParser::DEF, 0);
}

tree::TerminalNode* GrammarParser::MethodDeclarationContext::IDENTIFIER() {
  return getToken(GrammarParser::IDENTIFIER, 0);
}

GrammarParser::InstructionsDeclContext* GrammarParser::MethodDeclarationContext::instructionsDecl() {
  return getRuleContext<GrammarParser::InstructionsDeclContext>(0);
}


size_t GrammarParser::MethodDeclarationContext::getRuleIndex() const {
  return GrammarParser::RuleMethodDeclaration;
}


antlrcpp::Any GrammarParser::MethodDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitMethodDeclaration(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::MethodDeclarationContext* GrammarParser::methodDeclaration() {
  MethodDeclarationContext *_localctx = _tracker.createInstance<MethodDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, GrammarParser::RuleMethodDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    match(GrammarParser::DEF);
    setState(46);
    match(GrammarParser::IDENTIFIER);
    setState(47);
    match(GrammarParser::T__0);
    setState(48);
    instructionsDecl();
    setState(49);
    match(GrammarParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionsDeclContext ------------------------------------------------------------------

GrammarParser::InstructionsDeclContext::InstructionsDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::InstructionContext* GrammarParser::InstructionsDeclContext::instruction() {
  return getRuleContext<GrammarParser::InstructionContext>(0);
}

GrammarParser::InstructionsDeclContext* GrammarParser::InstructionsDeclContext::instructionsDecl() {
  return getRuleContext<GrammarParser::InstructionsDeclContext>(0);
}

GrammarParser::IfBlockContext* GrammarParser::InstructionsDeclContext::ifBlock() {
  return getRuleContext<GrammarParser::IfBlockContext>(0);
}

GrammarParser::ElseBlockContext* GrammarParser::InstructionsDeclContext::elseBlock() {
  return getRuleContext<GrammarParser::ElseBlockContext>(0);
}


size_t GrammarParser::InstructionsDeclContext::getRuleIndex() const {
  return GrammarParser::RuleInstructionsDecl;
}


antlrcpp::Any GrammarParser::InstructionsDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitInstructionsDecl(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::InstructionsDeclContext* GrammarParser::instructionsDecl() {
  InstructionsDeclContext *_localctx = _tracker.createInstance<InstructionsDeclContext>(_ctx, getState());
  enterRule(_localctx, 8, GrammarParser::RuleInstructionsDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GrammarParser::IADD:
      case GrammarParser::ISUB:
      case GrammarParser::IDIV:
      case GrammarParser::IMUL:
      case GrammarParser::IPUSH:
      case GrammarParser::ILOAD:
      case GrammarParser::ISTORE:
      case GrammarParser::IRET:
      case GrammarParser::FADD:
      case GrammarParser::FSUB:
      case GrammarParser::FDIV:
      case GrammarParser::FMUL:
      case GrammarParser::FPUSH:
      case GrammarParser::FLOAD:
      case GrammarParser::FSTORE:
      case GrammarParser::FRET:
      case GrammarParser::LDC:
      case GrammarParser::SWAP:
      case GrammarParser::NEW:
      case GrammarParser::AND:
      case GrammarParser::OR:
      case GrammarParser::RSTORE:
      case GrammarParser::CMPEQ:
      case GrammarParser::CALL:
      case GrammarParser::RET: {
        setState(51);
        instruction();
        break;
      }

      case GrammarParser::IF: {
        setState(52);
        ifBlock();
        setState(54);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == GrammarParser::ELSE) {
          setState(53);
          elseBlock();
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(59);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << GrammarParser::IADD)
      | (1ULL << GrammarParser::ISUB)
      | (1ULL << GrammarParser::IDIV)
      | (1ULL << GrammarParser::IMUL)
      | (1ULL << GrammarParser::IPUSH)
      | (1ULL << GrammarParser::ILOAD)
      | (1ULL << GrammarParser::ISTORE)
      | (1ULL << GrammarParser::IRET)
      | (1ULL << GrammarParser::FADD)
      | (1ULL << GrammarParser::FSUB)
      | (1ULL << GrammarParser::FDIV)
      | (1ULL << GrammarParser::FMUL)
      | (1ULL << GrammarParser::FPUSH)
      | (1ULL << GrammarParser::FLOAD)
      | (1ULL << GrammarParser::FSTORE)
      | (1ULL << GrammarParser::FRET)
      | (1ULL << GrammarParser::LDC)
      | (1ULL << GrammarParser::SWAP)
      | (1ULL << GrammarParser::NEW)
      | (1ULL << GrammarParser::AND)
      | (1ULL << GrammarParser::OR)
      | (1ULL << GrammarParser::RSTORE)
      | (1ULL << GrammarParser::CMPEQ)
      | (1ULL << GrammarParser::IF)
      | (1ULL << GrammarParser::CALL)
      | (1ULL << GrammarParser::RET))) != 0)) {
      setState(58);
      instructionsDecl();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

GrammarParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::InstructionContext::IADD() {
  return getToken(GrammarParser::IADD, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::ISUB() {
  return getToken(GrammarParser::ISUB, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::IDIV() {
  return getToken(GrammarParser::IDIV, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::IMUL() {
  return getToken(GrammarParser::IMUL, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::IRET() {
  return getToken(GrammarParser::IRET, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::FADD() {
  return getToken(GrammarParser::FADD, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::FSUB() {
  return getToken(GrammarParser::FSUB, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::FDIV() {
  return getToken(GrammarParser::FDIV, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::FMUL() {
  return getToken(GrammarParser::FMUL, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::FRET() {
  return getToken(GrammarParser::FRET, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::OR() {
  return getToken(GrammarParser::OR, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::AND() {
  return getToken(GrammarParser::AND, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::NEW() {
  return getToken(GrammarParser::NEW, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::CMPEQ() {
  return getToken(GrammarParser::CMPEQ, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::SWAP() {
  return getToken(GrammarParser::SWAP, 0);
}

tree::TerminalNode* GrammarParser::InstructionContext::RET() {
  return getToken(GrammarParser::RET, 0);
}

GrammarParser::CallContext* GrammarParser::InstructionContext::call() {
  return getRuleContext<GrammarParser::CallContext>(0);
}

GrammarParser::InstructionsWithOpContext* GrammarParser::InstructionContext::instructionsWithOp() {
  return getRuleContext<GrammarParser::InstructionsWithOpContext>(0);
}


size_t GrammarParser::InstructionContext::getRuleIndex() const {
  return GrammarParser::RuleInstruction;
}


antlrcpp::Any GrammarParser::InstructionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitInstruction(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::InstructionContext* GrammarParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 10, GrammarParser::RuleInstruction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GrammarParser::IADD:
      case GrammarParser::ISUB:
      case GrammarParser::IDIV:
      case GrammarParser::IMUL:
      case GrammarParser::IRET: {
        enterOuterAlt(_localctx, 1);
        setState(61);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << GrammarParser::IADD)
          | (1ULL << GrammarParser::ISUB)
          | (1ULL << GrammarParser::IDIV)
          | (1ULL << GrammarParser::IMUL)
          | (1ULL << GrammarParser::IRET))) != 0))) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        break;
      }

      case GrammarParser::FADD:
      case GrammarParser::FSUB:
      case GrammarParser::FDIV:
      case GrammarParser::FMUL:
      case GrammarParser::FRET: {
        enterOuterAlt(_localctx, 2);
        setState(62);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << GrammarParser::FADD)
          | (1ULL << GrammarParser::FSUB)
          | (1ULL << GrammarParser::FDIV)
          | (1ULL << GrammarParser::FMUL)
          | (1ULL << GrammarParser::FRET))) != 0))) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        break;
      }

      case GrammarParser::AND:
      case GrammarParser::OR: {
        enterOuterAlt(_localctx, 3);
        setState(63);
        _la = _input->LA(1);
        if (!(_la == GrammarParser::AND

        || _la == GrammarParser::OR)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        break;
      }

      case GrammarParser::NEW: {
        enterOuterAlt(_localctx, 4);
        setState(64);
        match(GrammarParser::NEW);
        break;
      }

      case GrammarParser::CMPEQ: {
        enterOuterAlt(_localctx, 5);
        setState(65);
        match(GrammarParser::CMPEQ);
        break;
      }

      case GrammarParser::SWAP: {
        enterOuterAlt(_localctx, 6);
        setState(66);
        match(GrammarParser::SWAP);
        break;
      }

      case GrammarParser::RET: {
        enterOuterAlt(_localctx, 7);
        setState(67);
        match(GrammarParser::RET);
        break;
      }

      case GrammarParser::CALL: {
        enterOuterAlt(_localctx, 8);
        setState(68);
        call();
        break;
      }

      case GrammarParser::IPUSH:
      case GrammarParser::ILOAD:
      case GrammarParser::ISTORE:
      case GrammarParser::FPUSH:
      case GrammarParser::FLOAD:
      case GrammarParser::FSTORE:
      case GrammarParser::LDC:
      case GrammarParser::RSTORE: {
        enterOuterAlt(_localctx, 9);
        setState(69);
        instructionsWithOp();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CallContext ------------------------------------------------------------------

GrammarParser::CallContext::CallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::CallContext::CALL() {
  return getToken(GrammarParser::CALL, 0);
}

std::vector<tree::TerminalNode *> GrammarParser::CallContext::IDENTIFIER() {
  return getTokens(GrammarParser::IDENTIFIER);
}

tree::TerminalNode* GrammarParser::CallContext::IDENTIFIER(size_t i) {
  return getToken(GrammarParser::IDENTIFIER, i);
}


size_t GrammarParser::CallContext::getRuleIndex() const {
  return GrammarParser::RuleCall;
}


antlrcpp::Any GrammarParser::CallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitCall(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::CallContext* GrammarParser::call() {
  CallContext *_localctx = _tracker.createInstance<CallContext>(_ctx, getState());
  enterRule(_localctx, 12, GrammarParser::RuleCall);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(GrammarParser::CALL);
    setState(73);
    match(GrammarParser::IDENTIFIER);
    setState(74);
    match(GrammarParser::T__3);
    setState(75);
    match(GrammarParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfBlockContext ------------------------------------------------------------------

GrammarParser::IfBlockContext::IfBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::IfBlockContext::IF() {
  return getToken(GrammarParser::IF, 0);
}

GrammarParser::InstructionsDeclContext* GrammarParser::IfBlockContext::instructionsDecl() {
  return getRuleContext<GrammarParser::InstructionsDeclContext>(0);
}


size_t GrammarParser::IfBlockContext::getRuleIndex() const {
  return GrammarParser::RuleIfBlock;
}


antlrcpp::Any GrammarParser::IfBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitIfBlock(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::IfBlockContext* GrammarParser::ifBlock() {
  IfBlockContext *_localctx = _tracker.createInstance<IfBlockContext>(_ctx, getState());
  enterRule(_localctx, 14, GrammarParser::RuleIfBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(GrammarParser::IF);
    setState(78);
    match(GrammarParser::T__0);
    setState(79);
    instructionsDecl();
    setState(80);
    match(GrammarParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElseBlockContext ------------------------------------------------------------------

GrammarParser::ElseBlockContext::ElseBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::ElseBlockContext::ELSE() {
  return getToken(GrammarParser::ELSE, 0);
}

GrammarParser::InstructionsDeclContext* GrammarParser::ElseBlockContext::instructionsDecl() {
  return getRuleContext<GrammarParser::InstructionsDeclContext>(0);
}


size_t GrammarParser::ElseBlockContext::getRuleIndex() const {
  return GrammarParser::RuleElseBlock;
}


antlrcpp::Any GrammarParser::ElseBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitElseBlock(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::ElseBlockContext* GrammarParser::elseBlock() {
  ElseBlockContext *_localctx = _tracker.createInstance<ElseBlockContext>(_ctx, getState());
  enterRule(_localctx, 16, GrammarParser::RuleElseBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(GrammarParser::ELSE);
    setState(83);
    match(GrammarParser::T__0);
    setState(84);
    instructionsDecl();
    setState(85);
    match(GrammarParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionsWithOpContext ------------------------------------------------------------------

GrammarParser::InstructionsWithOpContext::InstructionsWithOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}
